dashboard fix -> added text area and configured buttons

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,6 +8,22 @@
     <title>Dashboard</title>
     <link rel="stylesheet" type="text/css" href="../Dashboard2/dashboard_style.css">
     <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/en/thumb/c/c6/New_Era_University.svg/1200px-New_Era_University.svg.png">
+    
+    <style>
+        .readonly-input {
+          display: inline-block;
+          resize: none; 
+          margin-left: 20px;
+          margin-left: 10px;
+          border: none;
+        outline: none;
+        background-color: transparent;
+        font-size: inherit;
+        color: inherit;
+        padding: 0;   
+          width: 800px
+        }
+      </style>
 </head>
 
 <body>
@@ -89,23 +105,84 @@
 
     <!-- Main Content Section -->
     <section>
-        <div id="content-container" class="hidden">
-            <button class="remove-button" id="remove-button" onclick="removeItemsButton()">Remove items</button>
-            <p id="valueList"></p>
-            <br>
-            <p id="output"></p>
-            <!-- Send list of experts as objects -->
-
-
-            <!-- <br><br><br> -->
-            <!-- <br><br><br><br><br><br><br> -->
+        <div id="content-container">
+            <button class="remove-button" id="remove-button" onclick="removeItemsButton()">Delete</button>
+            <form id = "output-form" class="" action="/dashboard" method="post">
+                <textarea class="readonly-input" name="valueList" id="valueList" rows="4" cols="50" readonly></textarea>
+                <button class="submit-output" name="submit-button" type="submit">Submit</button>
+            </form>         
         </div>
+
+        <div id="output-container">
+           
+        </div>
+
     </section>
 
     <!-- Script -->
-    <script src="dashboard_script.js"></script>
+    <script>
+        function toggleCourseButton() {
+        var courseContainer = document.getElementById("course-container");
+        courseContainer.classList.toggle("show");
+        }
 
-    <!-- <script src="../../index.js"></script> -->
+        // Level of Education Container
+        function toggleLevelEducButton() {
+        var levelEducContainer = document.getElementById("levelEduc-container");
+        levelEducContainer.classList.toggle("show");
+        }
+
+        // Profession Container
+        function toggleProfessionButton() {
+        var professionContainer = document.getElementById("profession-container");
+        professionContainer.classList.toggle("show");
+        }
+
+        // School Container
+        function toggleSchoolButton() {
+        var schoolContainer = document.getElementById("school-container");
+        schoolContainer.classList.toggle("show");
+        }
+
+        // Section Container
+        var valueList = document.getElementById("valueList");
+        var outputList = document.getElementById("output");
+
+        var text = 'You have selected: ';
+        var listArray = [];
+
+        var checkboxes = document.querySelectorAll('input[type="checkbox"]');
+        var contentContainer = document.getElementById("content-container");
+
+        function showBoxContainer() {
+            if ([...checkboxes].some(checkbox => checkbox.checked)) {
+                contentContainer.classList.add("show");
+                document.getElementById("remove-button").style.display = "block"; //Show remove button 
+                
+                if (this.checked == true) {
+                    //Add value to array when checked
+                    listArray.push(this.value);
+                    valueList.value = text + listArray.join(' / ');
+                    
+                } else {
+                    //Remove value from array when unchecked
+                    listArray = listArray.filter(e => e !== this.value);
+                    valueList.value = text + listArray.join(' / ');
+                }
+
+            } else {
+                contentContainer.classList.remove("show");
+                listArray.length = 0; //Empty array when all boxes are unchecked
+                document.getElementById("remove-button").style.display = "none"; //Hide remove button 
+                outputList.innerHTML = ''; // Clear the search result
+            }
+        }
+
+        checkboxes.forEach(checkbox => {
+            checkbox.addEventListener("click", showBoxContainer)
+        });
+    </script>
+    <script src="../index.js"></script>
 </body>
 
 </html>
