--- a/public/Dashboard2/dashboard_style.css
+++ b/public/Dashboard2/dashboard_style.css
@@ -92,7 +92,7 @@ header #header-container .logout {
     padding: 6px 24px;
     text-decoration: none;
     text-shadow: 0px 1px 0px #810e05;
-    width: 40%;
+    /* width: 40%; */
     height: 50px;
     transition: all 0.25s ease-in-out;
 }
@@ -504,6 +504,29 @@ section .remove-button {
 
 section .remove-button:hover {
     background-color: #dedede;
+}
+
+.submit-output{
+    
+    background-color: #2ecc71;
+    color: #fff;
+    padding: 12px 30px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+    cursor: pointer;
+      
+}
+
+.submit-output:hover{
+    transform: translateY(-2px);
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
+    background-color: #27ae60;
 }
 
 
