--- a/public/Dashboard2/dashboard_style.css
+++ b/public/Dashboard2/dashboard_style.css
@@ -118,7 +118,7 @@ nav {
 }
 
 nav input[type="text"] {
-    width:75%;
+    width: 75%;
     padding: 10px;
     border: none;
     border-radius: 25px;
@@ -143,9 +143,9 @@ nav .search-button {
     width: 80px;
     height: 30px;
     border-radius: 25px;
-    cursor: pointer;    
+    cursor: pointer;
     background-color: #f1f1f1;
-    color:rgb(102, 102, 102);
+    color: rgb(102, 102, 102);
     font-size: 10px;
     font-weight: bold;
     box-shadow: 0 0 5px gray;
@@ -465,21 +465,15 @@ section::before {
 
 /* Content Container */
 section #content-container {
-    background-color: rgba(241, 241, 241, 0.85);
-
-    margin-top: 50px;
-    margin-left: 70px;
-    margin-right: 70px;
-
-    box-shadow: 0 0 5px gray;   
-    border: none;
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
-    position: relative;
-    z-index: 1;
-
     max-height: 0;
     overflow: auto;
-    transition: max-height .5s ease;
+    position: relative;
+    z-index: 1;
+    margin: 50px 70px;
+    transition: max-height 0.5s ease;
 }
 
 section #content-container.show {
@@ -487,28 +481,32 @@ section #content-container.show {
     transition: max-height 1s ease;
 }
 
+/* Remove and Submit Button */
 section .remove-button {
-    float: right;
-    margin-right: 10px;
-    margin-top: 10px;
+    display: none;
+    position: absolute;
+    top: 10px;
+    right: 10px;
     width: 50px;
     height: 30px;
     border-radius: 6px;
-    background-color: white;
-    color: black;
-    font-family: Arial;
+    background-color: #e7e7e7;
+    color: #131313;
+    font-family: 'Poppins', sans-serif;
     font-weight: bold;
     cursor: pointer;
-    display: none;
+    z-index: 2;
 }
 
 section .remove-button:hover {
-    background-color: #dedede;
+    background-color: #f1f1f1;
 }
 
-.submit-output{
-    
-    background-color: #2ecc71;
+.submit-output {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    background-color: #6c5ce7;
     color: #fff;
     padding: 12px 30px;
     border: none;
@@ -517,24 +515,23 @@ section .remove-button:hover {
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 1px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
     transition: all 0.3s ease;
     cursor: pointer;
-      
+    z-index: 2;
 }
 
-.submit-output:hover{
+.submit-output:hover {
     transform: translateY(-2px);
-    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
-    background-color: #27ae60;
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.4);
+    background-color: #6050db;
 }
 
 
+
+
+/* Section Paragraph */
 section p {
+    margin: 20px;
     text-align: left;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-right: 20px;
-    margin-left: 20px;
 }
-
