--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -7,21 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" type="text/css" href="../Dashboard2/dashboard_style.css">
-    <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/en/thumb/c/c6/New_Era_University.svg/1200px-New_Era_University.svg.png">
-    
+    <link rel="icon" type="image/png"
+        href="https://upload.wikimedia.org/wikipedia/en/thumb/c/c6/New_Era_University.svg/1200px-New_Era_University.svg.png">
+
     <style>
         .readonly-input {
-          display: inline-block;
-          resize: none; 
-          margin-left: 20px;
-          margin-left: 10px;
-          border: none;
-        outline: none;
-        background-color: transparent;
-        font-size: inherit;
-        color: inherit;
-        padding: 0;   
-          width: 800px
+            display: inline-block;
+            resize: none;
+            margin-left: 20px;
+            margin-left: 10px;
+            border: none;
+            outline: none;
+            background-color: transparent;
+            font-size: inherit;
+            color: inherit;
+            padding: 0;
+            width: 800px
         }
     </style>
 </head>
@@ -35,22 +36,22 @@
             <div>
                 <table>
                     <tr>
-                      <td> 
-                        <form action="/" method="get">
-                        <button class="myProfile" type="submit">My Profile</button>
-                        </form>
-                    </td>
-                      <td>
-                        <form action="/" method="get">
-                            <button class="logout" type="submit">Logout</button>
-                        </form>
-                      </td>
+                        <td>
+                            <form action="/" method="get">
+                                <button class="myProfile" type="submit">My Profile</button>
+                            </form>
+                        </td>
+                        <td>
+                            <form action="/" method="get">
+                                <button class="logout" type="submit">Logout</button>
+                            </form>
+                        </td>
                     </tr>
-                  </table>
-                  
-               
-                
-                
+                </table>
+
+
+
+
             </div>
         </div>
     </header>
@@ -89,7 +90,8 @@
             <button id="levelEduc-button" onclick="toggleLevelEducButton()" style="font-size: 1rem;"><b>Level of
                     Education</b></button>
             <div id="levelEduc-container">
-                <label class="levelEducOption"><input type="checkbox" value="Bachelor's Degree">Bachelor's Degree</label>
+                <label class="levelEducOption"><input type="checkbox" value="Bachelor's Degree">Bachelor's
+                    Degree</label>
                 <label class="levelEducOption"><input type="checkbox" value="Master's Degree">Master's Degree</label>
                 <label class="levelEducOption"><input type="checkbox" value="Doctoral Degree">Doctoral Degree</label>
             </div>
@@ -98,22 +100,26 @@
             <button id="profession-button" onclick="toggleProfessionButton()"
                 style="font-size: 1rem;"><b>Profession</b></button>
             <div id="profession-container">
-                <label class="professionOption"><input type="checkbox" value="Software Engineer">Software Engineer</label>
+                <label class="professionOption"><input type="checkbox" value="Software Engineer">Software
+                    Engineer</label>
                 <label class="professionOption"><input type="checkbox" value="IT Specialist">IT Specialist</label>
                 <label class="professionOption"><input type="checkbox" value="SOC Analyst">SOC Analyst</label>
                 <label class="professionOption"><input type="checkbox" value="Nurse">Nurse</label>
                 <label class="professionOption"><input type="checkbox" value="Medical Officer">Medical Officer</label>
-                <label class="professionOption"><input type="checkbox" value="Medical Specialist">Medical Specialist</label>
+                <label class="professionOption"><input type="checkbox" value="Medical Specialist">Medical
+                    Specialist</label>
             </div>
 
             <!-- School -->
             <button id="school-button" onclick="toggleSchoolButton()" style="font-size: 1rem;"><b>School</b></button>
             <div id="school-container">
                 <label class="schoolOption"><input type="checkbox" value="New Era University">New Era University</label>
-                <label class="schoolOption"><input type="checkbox" value="Lyceum of the Philippines">Lyceum of the Philippines</label>
+                <label class="schoolOption"><input type="checkbox" value="Lyceum of the Philippines">Lyceum of the
+                    Philippines</label>
                 <label class="schoolOption"><input type="checkbox" value="Adamson University">Adamson University</label>
                 <label class="schoolOption"><input type="checkbox" value="Ateneo de Manila">Ateneo de Manila</label>
-                <label class="schoolOption"><input type="checkbox" value="Philippine Normal University">Philippine Normal University</label>
+                <label class="schoolOption"><input type="checkbox" value="Philippine Normal University">Philippine
+                    Normal University</label>
             </div>
         </div>
 
@@ -123,46 +129,49 @@
     <section>
         <div id="content-container">
             <button class="remove-button" id="remove-button" onclick="removeItemsButton()">Delete</button>
-            <form id = "output-form" class="" action="/dashboard" method="post">
-                <textarea class="readonly-input" name="valueList" id="valueList" rows="4" cols="50" readonly></textarea>
+            <form id="output-form" class="" action="/dashboard" method="post">
+                <textarea class="readonly-input" name="valueList" id="valueList" rows="10" cols="50"
+                    readonly></textarea>
                 <button class="submit-output" name="submit-button" type="submit">Submit</button>
-                
-            </form>         
+
+            </form>
         </div>
 
         <div id="output-container">
             <!-- Current Workspace -->
-            <% if (outputDisplay.length > 0) { %>
-                <h1><%= outputDisplay[0].name %></h1>
-            <% } %>
+            <% if (outputDisplay.length> 0) { %>
+                <h1>
+                    <%= outputDisplay[0].name %>
+                </h1>
+                <% } %>
         </div>
 
     </section>
 
     <!-- Script -->
     <script>
-    
+
         function toggleCourseButton() {
-        var courseContainer = document.getElementById("course-container");
-        courseContainer.classList.toggle("show");
+            var courseContainer = document.getElementById("course-container");
+            courseContainer.classList.toggle("show");
         }
 
         // Level of Education Container
         function toggleLevelEducButton() {
-        var levelEducContainer = document.getElementById("levelEduc-container");
-        levelEducContainer.classList.toggle("show");
+            var levelEducContainer = document.getElementById("levelEduc-container");
+            levelEducContainer.classList.toggle("show");
         }
 
         // Profession Container
         function toggleProfessionButton() {
-        var professionContainer = document.getElementById("profession-container");
-        professionContainer.classList.toggle("show");
+            var professionContainer = document.getElementById("profession-container");
+            professionContainer.classList.toggle("show");
         }
 
         // School Container
         function toggleSchoolButton() {
-        var schoolContainer = document.getElementById("school-container");
-        schoolContainer.classList.toggle("show");
+            var schoolContainer = document.getElementById("school-container");
+            schoolContainer.classList.toggle("show");
         }
 
         // Section Container
@@ -177,14 +186,14 @@
 
         function showBoxContainer() {
             if ([...checkboxes].some(checkbox => checkbox.checked)) {
-                contentContainer.classList.add("show"); 
+                contentContainer.classList.add("show");
                 document.getElementById("remove-button").style.display = "block"; //Show remove button 
-                
+
                 if (this.checked == true) {
                     //Add value to array when checked
                     listArray.push(this.value);
                     valueList.value = text + listArray.join(' / ');
-                    
+
                 } else {
                     //Remove value from array when unchecked
                     listArray = listArray.filter(e => e !== this.value);
@@ -201,7 +210,24 @@
         checkboxes.forEach(checkbox => {
             checkbox.addEventListener("click", showBoxContainer)
         });
-    
+
+        // remove checkboxes when remove button clicked
+        const removeButton = document.getElementById('remove-button');
+
+        // Add a click event listener to the remove button
+        removeButton.addEventListener('click', function () {
+
+            // Get all the checkbox elements
+            const checkboxes = document.querySelectorAll('input[type="checkbox"]');
+
+            // Loop through all the checkbox elements and uncheck them
+            checkboxes.forEach(function (checkbox) {
+                checkbox.checked = false;
+                contentContainer.classList.remove("show");
+            });
+
+        });
+
     </script>
     <script src="../index.js" type="module"></script>
 </body>
