fixed the Content Container CSS/ fixed remove buttom usecase (*removes checkboxes & container)

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -220,7 +220,7 @@
             // Get all the checkbox elements
             const checkboxes = document.querySelectorAll('input[type="checkbox"]');
 
-            // Loop through all the checkbox elements and uncheck them
+            // Loop through all the checkbox elements and uncheck them.
             checkboxes.forEach(function (checkbox) {
                 checkbox.checked = false;
                 contentContainer.classList.remove("show");
